overflow fix

--- a/lupo/sass/main.sass
+++ b/lupo/sass/main.sass
@@ -146,6 +146,7 @@ body
 		position: relative
 	&-1
 		width: 77%
+		overflow: hidden
 		iframe
 			position: relative
 			background: #000
